--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "liguephonique",
   "version": "0.1.0",
+  "homepage": "https://anolletti.github.io/liguephonique",
   "private": true,
   "dependencies": {
     "@popperjs/core": "^2.11.8",
@@ -18,6 +19,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
